--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "add_intent_to_luis.js",
   "scripts": {
     "test": "npm test",
-    "start": "node add_intent_to_luis.js"
+    "start": "nodemon add_intent_to_luis.js"
   },
   "author": "youxuan jiang",
   "license": "ISC",
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "google-spreadsheet": "^3.0.13",
-    "requestretry": "^4.1.1",
+    "google-auth-library": "^6.1.3",
+    "google-spreadsheet": "^3.0.14",
+    "googleapis": "^65.0.0",
+    "request": "^2.88.2",
+    "requestretry": "^4.1.2",
     "util": "^0.12.3"
   }
 }
