增加新增entity list的功能，但還有些小瑕疵，如果該entity已經存在的話，則沒有辦法順利更新，必須要手動把所有已經存在的刪掉

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "add_intent_to_luis.js",
   "scripts": {
     "test": "npm test",
-    "start": "nodemon add_intent_to_luis.js"
+    "intent": "nodemon add_intent_to_luis.js",
+    "alias": "nodemon add_entities_list_to_luis.js"
   },
   "author": "youxuan jiang",
   "license": "ISC",
