--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "deepmerge": "^4.2.2",
     "google-auth-library": "^6.1.3",
-    "google-spreadsheet": "^3.0.14",
+    "google-spreadsheet": "^3.1.15",
     "googleapis": "^65.0.0",
+    "querystring": "^0.2.0",
     "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "requestretry": "^4.1.2",
     "util": "^0.12.3"
   }
