--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "scripts": {
     "test": "npm test",
     "intent": "nodemon add_intent_to_luis.js",
-    "alias": "nodemon add_entities_list_to_luis.js"
+    "alias": "nodemon add_entities_list_to_luis.js",
+    "entity_csv": "nodemon get_information_csv.js",
+    "alias_csv": "nodemon get_information_table_csv.js",
+    "answer_csv": "nodemon turn_sheet_to_csv.js"
   },
   "author": "youxuan jiang",
   "license": "ISC",
   "dependencies": {
+    "cli-color": "^2.0.0",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "deepmerge": "^4.2.2",
+    "fs": "0.0.1-security",
     "google-auth-library": "^6.1.3",
     "google-spreadsheet": "^3.1.15",
     "googleapis": "^65.0.0",
