語意分析的部分 - 能夠由「單位名稱」判斷「校區」 - 能夠由「單位內組別」判斷「單位名稱」
LUIS小工具的部分
- Update information_table的時候已經能夠透過指定「表單名稱」來進行更新（詳情請看README的說明）

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "add_intent_to_luis.js",
   "scripts": {
     "test": "node test_intent.js",
-    "delete": "rm -r *.csv",
+    "clean": "rm -r *.csv",
     "luis-intent": "node add_intent_to_luis.js",
     "luis-entity-alias": "node add_entities_list_to_luis.js",
     "csv-entity-list": "node get_information_csv.js",
