--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "clean": "rm -r *.csv",
     "luis-intent": "node add_intent_to_luis.js",
     "luis-entity-alias": "node add_entities_list_to_luis.js",
-    "csv-entity-list": "node get_information_csv.js",
-    "csv-entity-alias": "node get_information_table_csv.js",
+    "csv-entity-list": "node sheet_to_csv/get_information_csv.js",
+    "csv-entity-alias": "node sheet_to_csv/get_information_table_csv.js",
     "csv-answer": "node turn_sheet_to_csv.js"
   },
   "author": "youxuan jiang",
@@ -19,11 +19,13 @@
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "deepmerge": "^4.2.2",
+    "diff": "^5.0.0",
     "fs": "0.0.1-security",
     "google-auth-library": "^6.1.3",
     "google-spreadsheet": "^3.1.15",
     "googleapis": "^65.0.0",
-    "querystring": "^0.2.0",
+    "mssql": "^6.3.2",
+    "querystring": "^0.2.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "requestretry": "^4.1.2",
