--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
   "author": "youxuan jiang",
   "license": "ISC",
   "dependencies": {
-    "cli-color": "^2.0.0",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "deepmerge": "^4.2.2",
-    "diff": "^5.0.0",
     "fs": "0.0.1-security",
     "google-auth-library": "^6.1.3",
     "google-spreadsheet": "^3.1.15",
     "googleapis": "^65.0.0",
     "mssql": "^6.3.2",
+    "nodemon": "^2.0.12",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "requestretry": "^4.1.2",
+    "tedious": "^12.2.0",
+    "underscore": "^1.13.1",
     "util": "^0.12.3"
   },
   "devDependencies": {
